# stt_bench

./: .gitignore  README.md  pyproject.toml
configs/: african_evaluation.yaml  config.py
scripts/: evaluate.py
stt_benchmark/config/: models.yaml
stt_benchmark/config/language_support/: fleurs.py  mms.py  nllb.py  seamless.py  whisper.py
stt_benchmark/datasets/: base.py  fleurs.py
stt_benchmark/evaluation/: base.py  config.py  metrics.py  pipeline.py
stt_benchmark/models/: base.py  factory.py
stt_benchmark/models/hf/: cascaded.py  mms.py  seamless.py  whisper.py
stt_benchmark/utils/: audio.py  text_normalize.py
utils/: summarize_results.py
